refactor: replace deprecated Integer(int value) constructor with static factory valueOf(int)